Velcro test First SandBox/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>AED_Project_Manager__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AED Project Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_SBU__c</fullName>
        <formula>text(Account.SBU__c)</formula>
        <label>Account SBU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Notes__c</fullName>
        <label>Additional Notes</label>
        <length>55000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Branch_Name__c</fullName>
        <label>Branch Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch_Number__c</fullName>
        <label>Branch Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMOD_Contact_Id__c</fullName>
        <externalId>true</externalId>
        <label>CRMOD_Contact_Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ContactFormEmail__c</fullName>
        <label>Contact Form Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_Data_Quality__c</fullName>
        <formula>(If( ISBLANK(MailingStreet),0,20)+
If( ISBLANK(Email),0,20)+
If( ISBLANK(Phone),0,20)+
If( ISBLANK(Title),0,20)+
If( ISBLANK( ReportsToId ),0,20))/100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Data Quality</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Contact_Owner__c</fullName>
        <formula>IF(Account.Owner.Alias &lt;&gt;  Owner.Alias  , TRUE, FALSE)</formula>
        <label>Contact Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <label>Contact Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Buyer</fullName>
                </value>
                <value>
                    <fullName>Purchasing</fullName>
                </value>
                <value>
                    <fullName>Executive</fullName>
                </value>
                <value>
                    <fullName>R&amp;D</fullName>
                </value>
                <value>
                    <fullName>Logistics</fullName>
                </value>
                <value>
                    <fullName>Quality Assurance</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_language__c</fullName>
        <description>Preferred contact language</description>
        <inlineHelpText>Preferred contact language</inlineHelpText>
        <label>Contact language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Contact_language</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Category__c</fullName>
        <formula>TEXT(Account.Customer_Category__c)</formula>
        <label>Customer Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inactive_Account__c</fullName>
        <formula>IF(Account.Inactive__c = TRUE,TRUE,FALSE)</formula>
        <label>Inactive Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inactive_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Old Contact , no longer active, etc</description>
        <label>Inactive Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Company_Id__c</fullName>
        <description>LinkedIn Id of the company</description>
        <label>LinkedIn Company Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Member_Token__c</fullName>
        <description>LinkedIn Id of the contact</description>
        <label>LinkedIn Member Token</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LinkedIn_Page__c</fullName>
        <description>EMEA-only field.</description>
        <inlineHelpText>URL</inlineHelpText>
        <label>LinkedIn Page</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Oracle_Contact_Id__c</fullName>
        <label>Oracle Contact ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_ID__c</fullName>
        <formula>Owner.Id</formula>
        <label>Contact Owner ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Type__c</fullName>
        <formula>TEXT( Account.Partner_Type_1__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Manager_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Manager User</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>User.UserRole.Name</field>
                <operation>contains</operation>
                <value>Project</value>
            </filterItems>
            <filterItems>
                <field>User.UserRole.Name</field>
                <operation>contains</operation>
                <value>Product</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referrals__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Referrals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SC_IsApproved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SC_LastActivity__c</fullName>
        <description>The date and time when the Sitecore user was last authenticated or accessed.</description>
        <label>Last Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SC_LastLogin__c</fullName>
        <description>The date and time when the Sitecore user was last authenticated.</description>
        <label>Last Login</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SC_LastPasswordChanged__c</fullName>
        <description>The date and time when Sitecore user&apos;s password was last updated.</description>
        <label>Last Password Changed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SC_PasswordAnswer__c</fullName>
        <label>Password Answer</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SC_PasswordQuestion__c</fullName>
        <label>Password Question</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SC_Password__c</fullName>
        <label>Password</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>My_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.REPORTS_TO.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>APAC_Contact</fullName>
        <active>true</active>
        <label>APAC Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>Americas</fullName>
        <active>true</active>
        <label>Americas</label>
    </recordTypes>
    <recordTypes>
        <fullName>EMEA_Contact</fullName>
        <active>true</active>
        <label>EMEA Contact</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>LID__Check_CompanyId_Value</fullName>
        <active>true</active>
        <description>Throws an exception message if the company id contains non-numerics</description>
        <errorConditionFormula>AND(
	(LID__LinkedIn_Company_Id__c &lt;&gt; NULL),
	NOT(ISNUMBER(LID__LinkedIn_Company_Id__c))
)</errorConditionFormula>
        <errorDisplayField>LID__LinkedIn_Company_Id__c</errorDisplayField>
        <errorMessage>CompanyId should be a numeric value</errorMessage>
    </validationRules>
</CustomObject>